--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	esp32async/ESPAsyncTCP@^2.0.0
 	esp32async/ESPAsyncWebServer@^3.7.7
+	bblanchon/ArduinoJson@^7.4.1
